@@ -1,6 +1,6 @@
 module github.com/consol-monitoring/snclient
 
-go 1.23.8
+go 1.23.10
 
 require (
 	github.com/beevik/ntp v1.4.3
@@ -9,6 +9,7 @@ require (
 	github.com/davecgh/go-spew v1.1.2-0.20180830191138-d8f796af33cc
 	github.com/go-chi/chi/v5 v5.2.1
 	github.com/go-ole/go-ole v1.3.0
+	github.com/goccy/go-json v0.10.5
 	github.com/kdar/factorlog v0.0.0-20211012144011-6ea75a169038
 	github.com/mackerelio/checkers v0.2.0
 	github.com/miekg/dns v1.1.66
